# peptides_molecular_fingerprints_classification

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
data/AMPBenchmark/train_sequences/: Training_data_sampling_method=AMAP_rep1.fasta  Training_data_sampling_method=AMAP_rep2.fasta  Training_data_sampling_method=AMAP_rep3.fasta  Training_data_sampling_method=AMAP_rep4.fasta  Training_data_sampling_method=AMAP_rep5.fasta  Training_data_sampling_method=AMPScannerV2_rep1.fasta  Training_data_sampling_method=AMPScannerV2_rep2.fasta  Training_data_sampling_method=AMPScannerV2_rep3.fasta  Training_data_sampling_method=AMPScannerV2_rep4.fasta  Training_data_sampling_method=AMPScannerV2_rep5.fasta  Training_data_sampling_method=AMPlify_rep1.fasta  Training_data_sampling_method=AMPlify_rep2.fasta  Training_data_sampling_method=AMPlify_rep3.fasta  Training_data_sampling_method=AMPlify_rep4.fasta  Training_data_sampling_method=AMPlify_rep5.fasta  Training_data_sampling_method=AmpGram_rep1.fasta  Training_data_sampling_method=AmpGram_rep2.fasta  (+38 more)
data/Xu_AMP/: train_negative.fasta  train_positive.fasta
src/: appendix_lrgb_classifiers.py  common.py  main_ampbenchmark.py  main_autopeptideml.py  main_bert_amp_benchmark.py  main_lrgb.py  main_lrgb_binary_fp.py  main_peptidereactor.py  main_peptidereactor_fp_encoding.py  main_unidl4biopep.py  main_xu_amp.py
util_scripts/: create_bert_benchmark_datasets.py  parse_autopeptideml_results.py  parse_peptidereactor_results.py
util_scripts/data/: autopeptideml_results.csv  peptidereactor_results.json
(+45 files in other folders)
